--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@openzeppelin/contracts": "^4.7.3",
     "@openzeppelin/hardhat-upgrades": "^1.20.0",
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "zksync": "^0.13.1"
   }
 }
